--- a/index.html
+++ b/index.html
@@ -2,3 +2,16 @@
 layout: default
 permalink: /
 ---
+{% include hero.html %}
+
+{% include about.html %}
+
+{% include statistic.html %}
+
+{% include rockstar-speakers.html %}
+
+{% include venue.html %}
+
+{% include location-map.html %}
+
+{% include twitter-feed.html %}
