--- a/hackathon.html
+++ b/hackathon.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Hackathon
-permalink: /hackathon/
+title: Exhibits
+permalink: /exhibits/
 ---
 
  {% include top-section.html %}
  
- {% include partners.html %}
+ {% include about-hackathon.html %}
